--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,7 @@ WWW atau Word Wide Web </p><br>
 </section>
 
 <footer>
-<p style="color: #FFB6C1"> Created By Dimas Prayogo <br> XII RPL 1 </p>  
+<p style="color: #FFB6C1"> Created By Dimas Prayogo klangon boy <br> XII RPL 1 </p>  
 </footer>
 
 
